<resources>
    <string name="app_name">Sample</string>

    <string name="title_news">News</string>
    <string name="title_announcements">Announcements</string>
    <string name="title_events">Events</string>
    <string name="title_tournaments">Tournaments</string>
    <string name="title_settings">Settings</string>
    <string name="title_contactus">Contact Us</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="text_dismiss">Dismiss</string>

    <string name="hint_login_email">E-Mail</string>
    <string name="hint_login_id">Identity Number</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_register_email">Email</string>
    <string name="hint_register_password">Password</string>

    <string name="err_msg_email">Invalid E-mail</string>
    <string name="err_msg_password">Enter a password</string>

    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Register</string>

    <string name="action_search">Search</string>
</resources>
