<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group2" android:checkableBehavior="single">

        <item
                android:id="@+id/navigation_news"
                android:icon="@drawable/ic_dashboard_black_48dp"
                android:title="@string/title_news"/>
        <item
                android:id="@+id/navigation_announcements"
                android:icon="@drawable/ic_announcement_black_48dp"
                android:title="@string/title_announcements"/>
        <item
                android:id="@+id/navigation_events"
                android:icon="@drawable/ic_event_black_48dp"
                android:title="@string/title_events"/>
        <item
                android:id="@+id/navigation_tournaments"
                android:icon="@drawable/ic_toc_black_48dp"
                android:title="@string/title_tournaments"/>
    </group>

    <group android:id="@+id/group3" android:checkableBehavior="single">
        <item
                android:id="@+id/navigation_settings"
                android:icon="@drawable/ic_settings_applications_black_48dp"
                android:title="@string/title_settings"/>
        <item
                android:id="@+id/navigation_sontactus"
                android:icon="@drawable/ic_contact_mail_black_48dp"
                android:title="@string/title_contactus"/>
    </group>
</menu>